No update till now on Shoe Shop

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Product card shop</title>
   </head>
   <body>
-    <h1 class="title-shop">ADIDAS</h1>
+    <h1 class="title-shop">GKD.com</h1>
     <article class="banner">
       <div class="card__img">
         <!-- <img src="assets/img/img1.png" alt=""> -->
         <img src="assets/img/1.webp" alt="" />
       </div>
       <div class="card__name">
-        <p>OZELLE Running Shoes</p>
+        <p>GKD.com Running Shoes</p>
       </div>
       <div class="card__precis">
         <div class="card__price">
@@ -23,7 +23,7 @@
           ></a>
 
           <div>
-            <span class="card__preci card__preci--now">$749.00</span>
+            <span class="card__preci card__preci--now">₹749.00</span>
           </div>
         </div>
         <button>Buy Now</button>
@@ -43,8 +43,8 @@
             ><ion-icon name="heart-outline"></ion-icon
           ></a>
           <div>
-            <span class="card__preci card__preci--before">$990.00</span>
-            <span class="card__preci card__preci--now">$749.00</span>
+            <span class="card__preci card__preci--before">₹990.00</span>
+            <span class="card__preci card__preci--now">₹749.00</span>
           </div>
           <a href="" class="card__icon"
             ><ion-icon name="cart-outline"></ion-icon
@@ -65,8 +65,8 @@
           ></a>
 
           <div>
-            <span class="card__preci card__preci--before">$990.00</span>
-            <span class="card__preci card__preci--now">$749.00</span>
+            <span class="card__preci card__preci--before">₹990.00</span>
+            <span class="card__preci card__preci--now">₹749.00</span>
           </div>
           <a href="" class="card__icon"
             ><ion-icon name="cart-outline"></ion-icon
@@ -87,8 +87,8 @@
           ></a>
 
           <div>
-            <span class="card__preci card__preci--before">$990.00</span>
-            <span class="card__preci card__preci--now">$749.00</span>
+            <span class="card__preci card__preci--before">₹990.00</span>
+            <span class="card__preci card__preci--now">₹749.00</span>
           </div>
           <a href="" class="card__icon"
             ><ion-icon name="cart-outline"></ion-icon
